# givegif

./: .gitignore  .travis.yml  LICENSE  README.md  givegif.cabal  package.yaml  stack.yaml  thoughts.md
app/: Main.hs
src/: Console.hs  Main.hs
src/Options/Applicative/: Text.hs
test/: Spec.hs
